Added feature to generate markdown text for an Archive page.

--- a/WriteAsClient/WriteAsClient.csproj
+++ b/WriteAsClient/WriteAsClient.csproj
@@ -3,8 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>WriteAs.Client</RootNamespace>
-    <AssemblyName>WriteAs</AssemblyName>
+    <AssemblyName>WriteAs.Client</AssemblyName>
     <Authors>Dino Bansigan</Authors>
+    <Description>A wrapper library for the write.as API written in C#.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
