--- a/WriteAsConsoleApp/Properties/launchSettings.json
+++ b/WriteAsConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WriteAsConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "search dino baby caleb"
+      "commandLineArgs": "generatearchivepagemarkdown dino archivepagetest"
     }
   }
 }
