--- a/WriteAsConsoleApp/WriteAsConsoleApp.csproj
+++ b/WriteAsConsoleApp/WriteAsConsoleApp.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
+    <PackageReference Include="Markdown" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WriteAsClient\WriteAsClient.csproj" />
   </ItemGroup>
 
