Modified project to generate nuget package.

--- a/WriteAsClient/WriteAsClient.csproj
+++ b/WriteAsClient/WriteAsClient.csproj
@@ -7,6 +7,9 @@
     <Authors>Dino Bansigan</Authors>
     <Description>An unofficial .NET client for the write.as API written in C#.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>WriteAs.NET</PackageId>
+    <Product>WriteAs.NET</Product>
   </PropertyGroup>
 
   <ItemGroup>
