--- a/WriteAsClient/WriteAsClient.csproj
+++ b/WriteAsClient/WriteAsClient.csproj
@@ -21,7 +21,7 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
